fixed the spacing for company description

--- a/src/assets/sass/clusters/_maker-details.sass
+++ b/src/assets/sass/clusters/_maker-details.sass
@@ -55,7 +55,6 @@
     white-space: pre-wrap
     white-space: pre\9
 
-  .long,
   .address
     @extend .xlg-padding-top
 
